--- a/index.html
+++ b/index.html
@@ -32,27 +32,29 @@
 						<article class="thumb">
 							<a href="images/fulls/steampunk.png" class="image"><img src="images/fulls/steampunk.png" alt="" /></a>
 							<h2>Steampunk City</h2>
-							<p>Work created for the competition at my university where I took the second place. Used softwares: Blender.</p>
+							<p>Work created for the competition at my university. <br>Used softwares: Blender.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/thronehall.jpg" class="image"><img src="images/fulls/thronehall.jpg" alt="" /></a>
 							<h2>Throne Hall</h2>
-							<p>Project done in 2 days. Inspired by the one of the Spacework projects.Used softwares: Blender, Lighroom, Topaz studio.</p>
+							<p>Project done in 2 days. Inspired by the one of the Spacework projects.<br>Used softwares: Blender, Lighroom, Topaz studio.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/schoolcorridor.jpg" class="image"><img src="images/fulls/schoolcorridor.jpg" alt="" /></a>
 							<h2>School corridor</h2>
-							<p>A project inspired by corridors in Japanese schools. Used softwares: Blender, Substance painter, Topaz Studio.</p>
+							<p>A project inspired by corridors in Japanese schools. <br>Used softwares: Blender, Substance painter, Topaz Studio.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/labo.png" class="image"><img src="images/fulls/labo.png" alt="" /></a>
 							<h2>Space laboratory</h2>
-							<p>A project of Sci-Fi laboratory. Used softwares: Blender, Topaz Studio.</p>
+							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
+							<a href="images/fulls/1.gif" class="image"><img src="images/fulls/1.gif" alt="" /></a>
+							<h2>School corridor - animation</h2>
+							<p>A 10-second animation made for a school project.<br>
+								Used softwares: Blender, Hit Film
+							</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
