--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="images/fulls/beta.png" class="image"><img src="images/fulls/beta.png" alt="" /></a>
 							<h2>Coming soon</h2>
 							<p></p>
 						</article>
