--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
 										<p class="copyright">
-											After pressing the send button, please enter the message in the open mail program.
+											After pressing the send button, please enter the message in the open mail program.<br>
+											Email: mateuszpietka98@gmail.com
 										</p>
 									</form>
 								</section>
