--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 							</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/beta.png" class="image"><img src="images/fulls/beta.png" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
+							<a href="images/fulls/train.jpg" class="image"><img src="images/fulls/train.jpg" alt="" /></a>
+							<h2>Railway Station</h2>
+							<p>Railway station based on concept art from the internet.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
