--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/steampunk.png" class="image"><img src="images/fulls/steampunk.png" alt="" /></a>
+							<a href="images/fulls/steampunks.png" class="image"><img src="images/fulls/steampunks.png" alt="" /></a>
 							<h2>Steampunk City</h2>
 							<p>Work created for the competition at my university. <br>Used softwares: Blender.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/thronehall.jpg" class="image"><img src="images/fulls/thronehall.jpg" alt="" /></a>
+							<a href="images/fulls/thronehalls.jpg" class="image"><img src="images/fulls/thronehalls.jpg" alt="" /></a>
 							<h2>Throne Hall</h2>
 							<p>Project done in 2 days. Inspired by the one of the Spacework projects.<br>Used softwares: Blender, Lighroom, Topaz studio.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/schoolcorridor.jpg" class="image"><img src="images/fulls/schoolcorridor.jpg" alt="" /></a>
+							<a href="images/fulls/schoolcorridors.jpg" class="image"><img src="images/fulls/schoolcorridors.jpg" alt="" /></a>
 							<h2>School corridor</h2>
 							<p>A project inspired by corridors in Japanese schools. <br>Used softwares: Blender, Substance painter, Topaz Studio.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/labo.png" class="image"><img src="images/fulls/labo.png" alt="" /></a>
+							<a href="images/fulls/labos.png" class="image"><img src="images/fulls/labos.png" alt="" /></a>
 							<h2>Space laboratory</h2>
 							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
 						</article>
@@ -57,7 +57,7 @@
 							</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/train.jpg" class="image"><img src="images/fulls/train.jpg" alt="" /></a>
+							<a href="images/fulls/trains.jpg" class="image"><img src="images/fulls/trains.jpg" alt="" /></a>
 							<h2>Railway Station</h2>
 							<p>Railway station based on concept art from the internet.</p>
 						</article>
