--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<div>
 								<section>
 									<h2>A few words about myself</h2>
-									<p>My name is <strong>Mateusz</strong>. I'm living in Poland, I am a widely skilled with a passion for 3D graphic and art. I have about 2 years of experience with 3D and 2D graphic. I have knowledge in the field of 2D softwares like <strong>Photoshop,Illustrator,Indesign,Lighroom</strong> and 3D softwares like <strong>Blender, Substance painter</strong>.
+									<p>My name is <strong>Mateusz</strong>. I'm living in Poland, I am a widely skilled with a passion for 3D graphic and art. I have about 2 years of experience with 3D and 2D graphic. I have knowledge in the field of 2D softwares like <strong>Photoshop, Illustrator, Indesign, Lighroom, After Effect</strong> and 3D softwares like <strong>Blender, Substance painter</strong>.
 										I am open to acquiring knowledge and learning new softwares.</p>
 								</section>
 								<section>
