--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 						<article class="thumb">
 							<a href="images/fulls/trains.jpg" class="image"><img src="images/fulls/trains.jpg" alt="" /></a>
 							<h2>Railway Station</h2>
-							<p>Railway station based on concept art from the internet.</p>
+							<p>Railway station based on concept art from the internet.<br>
+							Used softwares: Blender, Photoshop, Lightroom, Topaz Studio
+							</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
