--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 							</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
+							<a href="images/fulls/japschool.jpg" class="image"><img src="images/thumbs/japschool.jpg" alt="" /></a>
+							<h2>Japan School</h2>
+							<p>Used softwares: Blender, Photoshop, Lightroom, Topaz Studio</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
