--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/japschool.jpg" class="image"><img src="images/thumbs/japschool.jpg" alt="" /></a>
+							<a href="images/fulls/japschool.jpg" class="image"><img src="images/fulls/japschool.jpg" alt="" /></a>
 							<h2>Japan School</h2>
 							<p>Used softwares: Blender, Photoshop, Lightroom, Topaz Studio</p>
 						</article>
