--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 							<p>Used softwares: Blender, Photoshop, Lightroom, Topaz Studio</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
+							<a href="images/fulls/Bathroom.jpg" class="image"><img src="images/fulls/Bathroom.jpg" alt="" /></a>
+							<h2>Bathroom</h2>
+							<p>Used softwares: Blender, Photoshop, Lightroom </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
