--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
 						</article>
 						<article class="thumb">
-							<a href="" class="image"><img src="" alt="" /></a>
+							<a href="https://youtu.be/xRrn4Ce-RBU" class="image"><img src="images/thumbs/2.gif" alt="" /></a>
 							<h2>School corridor - animation</h2>
 							<p>A 10-second animation made for a school project.<br>
 								Used softwares: Blender, Hit Film
