--- a/index.html
+++ b/index.html
@@ -21,78 +21,64 @@
 					<header id="header">
 						<h1><a href="index.html"><strong>Mateusz Piętka</strong> 3D graphic designer</a></h1>
 						<nav>
-							<ul>
+								<ul>														
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/steampunks.png" class="image"><img src="images/thumbs/steampunks.jpg" alt="" /></a>
-							<h2>Steampunk City</h2>
-							<p>Work created for the competition at my university. <br>Used softwares: Blender.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/thronehalls.jpg" class="image"><img src="images/thumbs/thronehalls.jpg" alt="" /></a>
-							<h2>Throne Hall</h2>
-							<p>Project done in 2 days. Inspired by the one of the Spacework projects.<br>Used softwares: Blender, Lighroom, Topaz studio.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/schoolcorridors.jpg" class="image"><img src="images/thumbs/schoolcorridors.jpg" alt="" /></a>
-							<h2>School corridor</h2>
-							<p>A project inspired by corridors in Japanese schools. <br>Used softwares: Blender, Substance painter, Topaz Studio.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/labos.png" class="image"><img src="images/thumbs/labos.jpg" alt="" /></a>
-							<h2>Space laboratory</h2>
-							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
-						</article>
-						<article class="thumb">
-							<a href="https://youtu.be/xRrn4Ce-RBU" class="image"><img src="images/thumbs/2.gif" alt="" /></a>
-							<h2>School corridor - animation</h2>
-							<p>A 10-second animation made for a school project.<br>
-								Used softwares: Blender, Hit Film
-							</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/trains.jpg" class="image"><img src="images/thumbs/trains.jpg" alt="" /></a>
-							<h2>Railway Station</h2>
-							<p>Railway station based on concept art from the internet.<br>
-							Used softwares: Blender, Photoshop, Lightroom, Topaz Studio
-							</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/japschool.jpg" class="image"><img src="images/thumbs/japschool.jpg" alt="" /></a>
-							<h2>Japan School</h2>
-							<p>Used softwares: Blender, Photoshop, Lightroom, Topaz Studio</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/Bathroom.jpg" class="image"><img src="images/fulls/Bathroom.jpg" alt="" /></a>
-							<h2>Bathroom</h2>
-							<p>Used softwares: Blender, Photoshop, Lightroom </p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Coming soon</h2>
-							<p></p>
-						</article>
+					<div id="main" >
+							<div class="inner">
+								<header></header>
+						<section class="tiles" style="text-align: center">
+							<article class="style1" >
+								<span class="image">
+									<img src="images/index/3D.jpg" alt="" />
+								</span>
+								<a href="3D.html">
+									<i class="fas fa-cube fa-8x"></i>
+									<div class="content">
+										<p><h2>3D GRAPHICS</h2></p>
+									</div>
+								</a>
+							</article>
+							<article class="style1">
+								<span class="image">
+									<img src="images/index/anim.gif" alt="" />
+								</span>
+								<a href="3DANIM.html">
+									<i class="fas fa-video fa-8x"></i>
+									<div class="content">
+											<p><h2>3D ANIMATIONS</h2></p>
+									</div>
+								</a>
+							</article>
+							<article class="style1">
+								<span class="image">
+									<img src="images/index/photo.jpg" alt="" />
+								</span>
+								<a href="photoedit.html">
+										<i class="far fa-image fa-8x"></i>
+									<div class="content">
+										<p><h2>PHOTO EDITING</h2></p>
+									</div>
+								</a>
+							</article>
+							<article class="style1">
+									<span class="image">
+										<img src="images/index/pixel.jpg" alt="" />
+									</span>
+									<a href="pixel.html">
+											<i class="fas fa-pencil-alt fa-8x"></i>
+										<div class="content">
+											<p><h2>PIXEL ART</h2></p>
+										</div>
+									</a>
+								</article>
+							
+						</section>	
+					</div>						
 					</div>
 
 				<!-- Footer -->
