--- a/pixel.html
+++ b/pixel.html
@@ -36,7 +36,7 @@
 							<a href="images/pixelart/full/1.jpg" class="image"><img src="images/pixelart/thumb/1.jpg" alt="" /></a>
 							<h2>Tree</h2>
 							<p>
-								Used softwares: Photoshop, Lighroom
+								Used softwares: Photoshop, Aseprite
 							</p>
 						</article>
 						
