--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<a href="photoedit.html">
 										<i class="far fa-image fa-8x"></i>
 									<div class="content">
-										<p><h2>PHOTO EDITING</h2></p>
+										<p><h2>PHOTO EDITING / PHOTOGRAPY</h2></p>
 									</div>
 								</a>
 							</article>
