--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</article>
 							<article class="style1">
 								<span class="image">
-									<img src="images/index/anim.gif" alt="" />
+									<img src="images/index/anim.jpg" alt="" />
 								</span>
 								<a href="3DANIM.html">
 									<i class="fas fa-video fa-8x"></i>
