--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script defer src="https://friconix.com/cdn/friconix.js"></script> 
 	</head>
 	<body class="is-preload">
 			<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
@@ -44,7 +45,7 @@
 									<img src="images/index/3D.jpg" alt="" />
 								</span>
 								<a href="3D.html">
-									<i class="fas fa-cube fa-8x"></i>
+										<i class="fi-swlux8-square"></i>
 									<div class="content">
 										<p><h2>3D GRAPHICS</h2></p>
 									</div>
@@ -55,7 +56,7 @@
 									<img src="images/index/anim.jpg" alt="" />
 								</span>
 								<a href="3DANIM.html">
-									<i class="fas fa-video fa-8x"></i>
+										<i class="fi-xnlux9-videocamera"></i>
 									<div class="content">
 											<p><h2>3D ANIMATIONS</h2></p>
 									</div>
@@ -66,18 +67,18 @@
 									<img src="images/index/photo.jpg" alt="" />
 								</span>
 								<a href="photoedit.html">
-										<i class="far fa-image fa-8x"></i>
+										<i class="fi-xnlux8-camera"></i>
 									<div class="content">
 										<p><h2>PHOTO EDITING / PHOTOGRAPY</h2></p>
 									</div>
 								</a>
 							</article>
-							<article class="style1">
+							<article class="style2">
 									<span class="image">
 										<img src="images/index/pixel.jpg" alt="" />
 									</span>
 									<a href="pixel.html">
-											<i class="fas fa-pencil-alt fa-8x"></i>
+											<i class="fi-xnlux8-edit"></i>
 										<div class="content">
 											<p><h2>PIXEL ART</h2></p>
 										</div>
