--- a/3DANIM.html
+++ b/3DANIM.html
@@ -22,7 +22,7 @@
 						<h1><a href="index.html"><strong>Mateusz Piętka</strong> 3D graphic designer</a></h1>
 						<nav>
 							<ul>
-								<li><a href="index.html" class="icon solid fa-backward">Back</a></li>
+								<li><a href="menu.html" class="icon solid fa-backward">Back</a></li>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
 							</ul>
 						</nav>
