--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 			<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
 					<iframe frameborder="0" height="100%" width="100%" 
-					  src="https://www.youtube.com/embed/6eqp7RMi04U?autoplay=1&controls=0&showinfo=0&autohide=1&loop=1">
+					  src="https://www.youtube.com/embed/6eqp7RMi04U?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ&showinfo=0&controls=0&autohide=1">
 					</iframe>
 				  </div>
 
