--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<nav>
 							<ul>
 								
-								<li><a href="menu.html" style="text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.473); box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.199);">MENU</a></li>
+								<li><a href="menu.html" ><b>MENU</b></a></li>
 								
 							</ul>
 						</nav>
