--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Mateusz Piętka</h1>
-								<p>PORTFOLIO</p>
+								<p>Graphic Designer</p>
+								
 							</div>
 						</div>
 						<nav>
@@ -43,7 +44,7 @@
 				
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Site edited by Mateusz P and designed by <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Site edited by Mateusz P and designed by HTML5 UP.</p>
 					</footer>
 
 			</div>
