--- a/3DANIM.html
+++ b/3DANIM.html
@@ -34,7 +34,7 @@
 						
 						<article class="thumb">
 							<a href="https://youtu.be/xRrn4Ce-RBU" class="image"><img src="images/index/anim.gif" alt="" /></a>
-							<h2>School corridor - animation</h2>
+							<h2>School corridor - click to open <i class="fas fa-play"></i></h2>
 							<p>A 10-second animation made for a school project.<br>
 								Used softwares: Blender, Hit Film
 							</p>
