--- a/menu.html
+++ b/menu.html
@@ -12,9 +12,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script defer src="https://friconix.com/cdn/friconix.js"></script> 
+		<script>
+				if(window.innerWidth <= 800 && window.innerHeight <= 600) {
+				  document.querySelector('.video').style.display = "none"
+			   }
+			  </script>
 	</head>
 	<body class="is-preload">
-			<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+			<div class="video" style="position: fixed; z-index: -99; width: 100%; height: 100%">
 					<iframe frameborder="0" height="100%" width="100%" 
 					  src="https://www.youtube.com/embed/VcoO6sNrQEI?controls=0&mute=1&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ&showinfo=0&controls=0&autohide=1">
 					</iframe>
