--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body class="is-preload">
 			<div class="video" style="position: fixed; z-index: -99; width: 100%; height: 100%">
 					<iframe frameborder="0" height="100%" width="100%" 
-					  src="https://www.youtube.com/embed/RK1RRVR9A2g?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&playlist=W0LHTWG-UmQ&showinfo=0&controls=0&autohide=1">
+					  src="https://www.youtube.com/embed/RK1RRVR9A2g?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&playlist=RK1RRVR9A2g&showinfo=0&controls=0&autohide=1">
 					</iframe>
 				  </div>
 
