--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>Mateusz Piętka</h1>
+								<img src="images/logo/logo1.png" width="20%" height="20%">
+								<h2>Mateusz Piętka</h2>
 								<p>Graphic Designer</p>
 								
 							</div>
