--- a/3D.html
+++ b/3D.html
@@ -46,6 +46,11 @@
 							<p>A project inspired by corridors in Japanese schools. <br>Used softwares: Blender, Substance painter, Topaz Studio.</p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/arctic.jpg" class="image"><img src="images/thumbs/arctic.jpg" alt="" /></a>
+							<h2>Arctic</h2>
+							<p>Used softwares: Blender, Photoshop, Lighroom</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/labos.jpg" class="image"><img src="images/thumbs/labos.jpg" alt="" /></a>
 							<h2>Space laboratory</h2>
 							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
