--- a/3D.html
+++ b/3D.html
@@ -51,6 +51,11 @@
 							<p>Used softwares: Blender, Photoshop, Lighroom</p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/shop.jpg" class="image"><img src="images/fulls/shop.jpg" alt="" /></a>
+							<h2>Flower Shop</h2>
+							<p>Used softwares: Blender, Photoshop, Lighroom</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/labos.jpg" class="image"><img src="images/thumbs/labos.jpg" alt="" /></a>
 							<h2>Space laboratory</h2>
 							<p>A project of Sci-Fi laboratory. <br>Used softwares: Blender, Topaz Studio.</p>
