--- a/menu.html
+++ b/menu.html
@@ -68,28 +68,7 @@
 									</div>
 								</a>
 							</article>
-							<article class="style1">
-								<span class="image">
-									<img src="images/index/photo1.jpg" alt="" />
-								</span>
-								<a href="photoedit.html">
-										<i class="fi-xnlux8-camera"></i>
-									<div class="content">
-										<p><h2>PHOTO EDITING / PHOTOGRAPY</h2></p>
-									</div>
-								</a>
-							</article>
-							<article class="style2">
-									<span class="image">
-										<img src="images/index/pixel.jpg" alt="" />
-									</span>
-									<a href="pixel.html">
-											<i class="fi-xnlux8-edit"></i>
-										<div class="content">
-											<p><h2>PIXEL ART</h2></p>
-										</div>
-									</a>
-								</article>
+							
 								<article class="style2">
 										<span class="image">
 											<img src="images/index/logos.jpg" alt="" />
@@ -101,6 +80,28 @@
 											</div>
 										</a>
 									</article>
+									<article class="style1">
+								<span class="image">
+									<img src="images/index/photo1.jpg" alt="" />
+								</span>
+								<a href="photoedit.html">
+										<i class="fi-xnlux8-camera"></i>
+									<div class="content">
+										<p><h2>PHOTO EDITING / PHOTOGRAPY</h2></p>
+									</div>
+								</a>
+							</article>
+							<!---<article class="style2">
+									<span class="image">
+										<img src="images/index/pixel.jpg" alt="" />
+									</span>
+									<a href="pixel.html">
+											<i class="fi-xnlux8-edit"></i>
+										<div class="content">
+											<p><h2>PIXEL ART</h2></p>
+										</div>
+									</a>
+								</article>-->
 							
 						</section>	
 					</div>						
