--- a/photoedit.html
+++ b/photoedit.html
@@ -32,13 +32,13 @@
 					<div id="main">
 						
 						
-						<article class="thumb">
+						<!---<article class="thumb">
 							<a href="images/photoedit/full/tree.jpg" class="image"><img src="images/photoedit/thumbs/tree.jpg" alt="" /></a>
 							<h2>Tree</h2>
 							<p>
 								Used softwares: Photoshop, Lighroom
 							</p>
-						</article>
+						</article>-->
 						<article class="thumb">
 							<a href="images/photoedit/full/p1.jpg" class="image"><img src="images/photoedit/thumbs/2.jpg" alt="" /></a>
 							<h2>Lake</h2>
