--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
 								<a href="3D.html">
 										<i class="fi-swlux7-square"></i>
 									<div class="content">
-										<p><h2>3D GRAPHICS</h2></p>
+										<p><h2>3D ENVIRONMENT</h2></p>
 									</div>
 								</a>
 							</article>
@@ -77,6 +77,17 @@
 												<i class="fi-xnlux8-heart"></i>
 											<div class="content">
 												<p><h2>LOGO DESIGN</h2></p>
+											</div>
+										</a>
+									</article>
+									<article class="style1">
+										<span class="image">
+											<img src="images/3dobjects/water_collector.jpg" alt="" />
+										</span>
+										<a href="3dmodels.html">
+											<i class="fi-xnlux8-dune-buggy-solid"></i>
+											<div class="content">
+												<p><h2>3D Models</h2></p>
 											</div>
 										</a>
 									</article>
