--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			  </script>
 	</head>
 	<body class="is-preload">
-			<div class="video" style="position: fixed; z-index: -99; width: 100%; height: 100%">
+			<div class="video" style="position: fixed; z-index: -99; width: 100%; height: 100%; margin: 0;">
 					<iframe frameborder="0" height="100%" width="100%" 
-					  src="https://www.youtube.com/embed/RK1RRVR9A2g?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&playlist=RK1RRVR9A2g&showinfo=0&controls=0&autohide=1">
+					  src="https://www.youtube.com/embed/no-c7KSk0Gg?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&playlist=no-c7KSk0Gg&showinfo=0&controls=0&autohide=1">
 					</iframe>
 				  </div>
 
